...
        <scene sceneID="9cf-E2-H0z">
            <objects>
                <viewController title="Add Building" id="E8S-Kp-RNY" customClass="AddBuildingViewController" customModule="qrcodeStuff" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="3xZ-1x-jSB">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Add">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                                                <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                <subviews>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TJO-rO-Fgo">
                                                                        <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                        <color key="tintColor" systemColor="systemGreenColor"/>
...
                                                                <rect key="frame" x="0.0" y="74" width="378" height="50"/>
                                                                <subviews>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="29b-Bs-ZbV">
                                                                        <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                        <color key="tintColor" systemColor="systemGreenColor"/>
...
                                                    <constraint firstAttribute="height" constant="50" id="ezw-co-6Em"/>
                                                </constraints>
                                                <state key="normal" title="Continue">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                <rect key="frame" x="143" y="725" width="128" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Continue to Profile">
                                    <color key="titleColor" systemColor="systemGreenColor"/>
                                </state>
...
