...
        errorLabel2.alpha = 0;
    }
    
    @IBAction func addBuildingButton(_ sender: Any) {
        // check if building name not supplied
        if (buildingNameTextField.text == "") {
            errorLabel1.text = "Invalid building name";
            errorLabel1.textColor = UIColor.red;
            errorLabel1.alpha = 1;
            return;
        }
        // check if capacity not a number or if capacity is less than 1
        if ((Int(capacityTextField.text ?? "-1") ?? -1) < 1) {
            errorLabel1.text = "Invalid capacity";
            errorLabel1.textColor = UIColor.red;
            errorLabel1.alpha = 1;
            return;
        }
        
        let db = Firestore.firestore()
        var alreadyExists = false;
        db.collection("buildings").whereField("buildingName", isEqualTo: buildingNameTextField.text).getDocuments(){(querySnapshot, err) in
            if ((querySnapshot?.isEmpty) == false) {
                // building already exist
                self.errorLabel1.text = "Building already exists";
                self.errorLabel1.textColor = UIColor.red;
                self.errorLabel1.alpha = 1;
            } else {
                // building doesn't already exist
                self.errorLabel1.alpha = 0;
                db.collection("buildings").addDocument(data: [
...
                    if let err = err {
                        print("Error writing document: \(err)")
                        self.errorLabel1.text = "Error writing document: \(err)"
                        self.errorLabel1.textColor = UIColor.red;
                    } else {
                        print("Document successfully written!")
                        self.errorLabel1.text = "Building successfully added!"
                        self.errorLabel1.textColor = UIColor.green;
                        self.buildingNameTextField.text = "";
                        self.capacityTextField.text = "";
                    }
                    self.errorLabel1.alpha = 1;
                }
...
